app/styles/_reset.sass
/**
 * RESET
 */

@-ms-viewport
  width: device-width
@-o-viewport
  width: device-width
@viewport
  width: device-width

*
  +box-sizing( border-box )
  -webkit-text-size-adjust: 100%
  -webkit-tap-highlight-color: rgba( black, 0 )

h1,
h2,
h3,
h4,
h5,
p,
ul,
ol
  @extend %no-margin-padding

ul,
ol
  list-style: none

img
  width: 100%
  height: auto

